--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "reset-css": "^4.0.1",
+    "styled-jsx": "^3.2.1"
   }
 }
